chore: add script running uat

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "dev:staging": "next dev",
+    "dev:uat": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
